--- a/404.html
+++ b/404.html
@@ -6,6 +6,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="T4W - Technology web" />
+    <meta name="keywords" content="bootstrap 5, Cocial Media, Web Design, Sites" />
+    <meta name="author" content="T4W - Tech For Web" />
+
+     <!-- Site favicon -->
+     <link rel="shortcut icon" href="img/fiveicon/favicon.ico" />
+     <link rel="apple-touch-icon" sizes="180x180" href="img/fiveicon/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="img/fiveicon/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="img/fiveicon/favicon-16x16.png">
+     <link rel="manifest" href="img/fiveicon/site.webmanifest">
+     <link rel="mask-icon" href="img/fiveicon/safari-pinned-tab.svg" color="#5bbad5">
+     <meta name="msapplication-TileColor" content="#da532c">
+     <meta name="theme-color" content="#ffffff">
 
     <!-- bootstrap grid css -->
     <link rel="stylesheet" href="css/plugins/bootstrap-grid.css">
@@ -13,13 +26,14 @@
     <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
     <!-- swiper css -->
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
+    <!-- magnific css -->
+    <link rel="stylesheet" href="css/plugins/magnific-popup.css">
     <!-- t4w css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- page name -->
-    <title>t4w</title>
+    <title>Tech For Web </title>
 
 </head>
-
 <body>
 
     <!-- wrapper -->
@@ -29,82 +43,13 @@
             <div class="mil-progress"></div>
         </div>
 
-        <!-- top bar -->
-        <div class="mil-top-panel">
-            <div class="container-fluid">
-                <div class="mil-top-panel-content">
-                    <a href="home-1.html" class="mil-logo">
-                        <img src="img/logo/logo-light.png" alt="Logo" style="width: 130px;">
-                    </a>
-
-                    <div class="mil-navigation">
-                        <nav>
-                            <ul>
-                                <li class="mil-has-children">
-                                    <a href="home-1.html">Home</a>
-                                    <ul>
-                                        <li><a href="home-1.html">Type 1</a></li>
-                                        <li><a href="home-2.html">Type 2</a></li>
-                                        <li><a href="home-3.html">Type 3</a></li>
-                                    </ul>
-                                </li>
-                                <li class="mil-has-children">
-                                    <a href="services.html">Services</a>
-                                    <ul>
-                                        <li><a href="services.html">Services</a></li>
-                                        <li><a href="service.html">Single Service</a></li>
-                                    </ul>
-                                </li>
-                                <li class="mil-has-children">
-                                    <a href="portfolio.html">Projects</a>
-                                    <ul>
-                                        <li><a href="portfolio.html">Projects list</a></li>
-                                        <li><a href="project.html">Single Project</a></li>
-                                    </ul>
-                                </li>
-                                <li class="mil-has-children">
-                                    <a href="blog.html">Blog</a>
-                                    <ul>
-                                        <li><a href="blog.html">Blog list</a></li>
-                                        <li><a href="publication.html">Single Publication</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="contact.html">Contact Us</a></li>
-                                <li class="mil-has-children mil-active">
-                                    <a href="#.">Other</a>
-                                    <ul>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="team.html">Team</a></li>
-                                        <li><a href="team-member.html">Team Member</a></li>
-                                        <li><a href="coming-soon.html">Coming Soon</a></li>
-                                        <li><a href="404.html">404</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-
-                    <!-- right buttons -->
-                    <div class="mil-top-panel-buttons">
-                        <a href="contact.html" class="mil-button mil-sm">Start A Project</a>
-                        <div class="mil-menu-btn">
-                            <span></span>
-                        </div>
-                    </div>
-                    <!-- right buttons end -->
-
-                </div>
-
-            </div>
-        </div>
-        <!-- top bar end -->
 
         <!-- content -->
         <div id="content">
 
             <!-- banner -->
             <section class="mil-banner mil-relative">
-                <img src="img/photo/16.jpg" class="mil-bg-img mil-scale" data-value-1=".4" data-value-2="1.4" alt="image">
+                <img src="img/photo/404.png" class="mil-bg-img mil-scale" data-value-1=".4" data-value-2="1.4" alt="image">
                 <div class="mil-overlay"></div>
                 <div class="container">
                     <div class="mil-background-grid mil-top-space"></div>
@@ -113,10 +58,10 @@
                             <div class="col-xl-5">
 
                                 <div class="mil-sm-center mil-mb-90">
-                                    <span class="mil-suptitle mil-light mil-upper mil-mb-60">Page Not Found</span>
+                                    <span class="mil-suptitle mil-light mil-upper mil-mb-60">Ops! Página não encontrada</span>
                                     <h1 class="mil-upper mil-light mil-mb-60">Error <span class="mil-marker mil-dark">404</span></h1>
-                                    <p class="mil-light-soft mil-mb-60">The page you are looking for does not exist, it may have been moved or removed altogether.</p>
-                                    <a href="home-1.html" class="mil-button">Back to Home</a>
+                                    <p class="mil-light-soft mil-mb-60">A página que você procura não existe, pode ter sido movida ou removida completamente.</p>
+                                    <a href="/" class="mil-button">Voltar pra home</a>
                                 </div>
 
                             </div>
