--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             <div class="row">
                                 <div class="col-sm-4">
 
-                                    <a href="project.html" class="mil-icon-box mil-sm-center mil-mb-30">
+                                    <a href="portfolio.html" class="mil-icon-box mil-sm-center mil-mb-30">
                                         <div class="mil-icon mil-icon-accent-bg mil-up mil-mb-30">
                                             <img src="img/icons/3.svg" alt="icon">
                                         </div>
@@ -216,7 +216,7 @@
                                 </div>
                                 <div class="col-sm-4">
 
-                                    <a href="project.html" class="mil-icon-box mil-sm-center mil-mb-30">
+                                    <a href="portfolio.html" class="mil-icon-box mil-sm-center mil-mb-30">
                                         <div class="mil-icon mil-icon-accent-bg mil-up mil-mb-30">
                                             <img src="img/icons/4.svg" alt="icon">
                                         </div>
@@ -226,7 +226,7 @@
                                 </div>
                                 <div class="col-sm-4">
 
-                                    <a href="project.html" class="mil-icon-box mil-sm-center mil-mb-30">
+                                    <a href="portfolio.html" class="mil-icon-box mil-sm-center mil-mb-30">
                                         <div class="mil-icon mil-icon-accent-bg mil-up mil-mb-30">
                                             <img src="img/icons/5.svg" alt="icon">
                                         </div>
@@ -350,7 +350,7 @@
                                 <div class="mil-project-descr">
                                     <h4 class="mil-upper mil-mb-20">Site one-page</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
-                                    <p>Resumimos todo o conteúdo em apenas uma página subdividida em seções abertas na própria home page, são mais adequados para empresas de audiência jovem, familiarizada com o tipo de linguagem e acostumada com a rapidez dos veículos digitais.</p>
+                                    <p>Conteúdo em apenas uma página subdividida em seções abertas na própria home page, são mais adequados para empresas familiarizadas com o tipo de linguagem e acostumada com a rapidez dos veículos digitais.</p>
                                 </div>
                             </a>
 
@@ -362,7 +362,7 @@
                                 <div class="mil-project-descr">
                                     <h4 class="mil-upper mil-mb-20">UI/UX Design</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
-                                    <p>UI/UX é a fusão de design visual (UI) e experiência do usuário (UX) para criar produtos digitais esteticamente atrativos e altamente usáveis. Enquanto UI trata da aparência visual, UX concentra-se na jornada do usuário, garantindo facilidade de uso e satisfação. O objetivo é proporcionar uma experiência positiva e intuitiva, combinando design atraente com funcionalidade eficaz.</p>
+                                    <p>UI/UX é a fusão de design visual e experiência do usuário para criar produtos digitais esteticamente atrativos e altamente usáveis. Enquanto UI trata da aparência visual, UX concentra-se na jornada do usuário, garantindo facilidade de uso e satisfação.</p>
                                 </div>
                             </a>
 
