--- a/portfolio.html
+++ b/portfolio.html
@@ -49,8 +49,8 @@
         <div class="mil-top-panel">
             <div class="container-fluid">
                 <div class="mil-top-panel-content">
-                    <a href="home-1.html" class="mil-logo">
-                        <img src="img/logo/logo.png" alt="Logo" style="width: 130px;">
+                    <a href="/" class="mil-logo">
+                        <img src="img/logo/logo.png" alt="Logo" style="width: 90px;">
                     </a>
 
                     <div class="mil-navigation">
@@ -303,7 +303,7 @@
                         </div>
                         <div class="col-lg-4">
 
-                            <a href="home-1.html" class="mil-footer-logo mil-up mil-mb-30">
+                            <a href="/" class="mil-footer-logo mil-up mil-mb-30">
                                 <img src="img/logo/logo.png" alt="Logo" style="width: 130px">
                             </a>
 
