--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
             <div class="container-fluid">
                 <div class="mil-top-panel-content">
                     <a href="/" class="mil-logo">
-                        <img src="img/logo/logo.png" alt="Logo" style="width: 90px;">
+                        <img src="img/logo/logo.png" alt="Logo" style="width: 80px;">
                     </a>
 
                     <div class="mil-navigation">
@@ -122,9 +122,9 @@
                     <div class="mil-filter mil-up mil-mb-90">
                         <div class="mil-filter-links">
                             <a href="#" data-filter="*" class="mil-current">Todos</a>
-                            <a href="#" data-filter=".architecture" class="">Social Mídia Design</a>
-                            <a href="#" data-filter=".interior" class="">Desenvolvimento Web</a>
-                            <a href="#" data-filter=".sustainable" class="">Aplicações Web</a>
+                            <a href="#" data-filter=".social" class="">Social Mídia Design</a>
+                            <a href="#" data-filter=".devweb" class="">Desenvolvimento Web</a>
+                            <a href="#" data-filter=".appweb" class="">Aplicações Web</a>
                         </div>
                     </div>
                     <!-- filter end -->
@@ -135,33 +135,33 @@
 
                                 <div class="grid-sizer"></div>
 
-                                <div class="mil-grid-item architecture">
+                                <div class="mil-grid-item social">
 
                                     <a href="project.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
                                         <img src="img/covers/1.jpg" alt="cover">
                                         <div class="mil-project-descr">
-                                            <h3 class="mil-upper mil-mb-30">Modern <br>architecture</h3>
+                                            <h3 class="mil-upper mil-mb-30">Modern <br>social</h3>
                                             <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
-                                        <div class="mil-category">Architecture</div>
+                                        <div class="mil-category">Social Mídia Design</div>
                                     </a>
 
                                 </div>
 
-                                <div class="mil-grid-item interior">
+                                <div class="mil-grid-item devweb">
 
                                     <a href="project.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
                                         <img src="img/covers/2.jpg" alt="cover">
                                         <div class="mil-project-descr">
-                                            <h3 class="mil-upper mil-mb-30">Modern <br> architecture</h3>
+                                            <h3 class="mil-upper mil-mb-30">Modern <br> social</h3>
                                             <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
-                                        <div class="mil-category">Interior</div>
+                                        <div class="mil-category">Dev. Web</div>
                                     </a>
 
                                 </div>
 
-                                <div class="mil-grid-item sustainable">
+                                <div class="mil-grid-item appweb">
 
                                     <a href="project.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
                                         <img src="img/covers/3.jpg" alt="cover">
@@ -169,12 +169,12 @@
                                             <h3 class="mil-upper mil-mb-30">Confidential <br>Technology</h3>
                                             <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
-                                        <div class="mil-category">Sustainable</div>
+                                        <div class="mil-category">Aplicações Web</div>
                                     </a>
 
                                 </div>
 
-                                <div class="mil-grid-item architecture">
+                                <div class="mil-grid-item social">
 
                                     <a href="project.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
                                         <img src="img/covers/4.jpg" alt="cover">
@@ -182,12 +182,12 @@
                                             <h3 class="mil-upper mil-mb-30">Confidential <br>Technology</h3>
                                             <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
-                                        <div class="mil-category">Architecture</div>
+                                        <div class="mil-category">Social Mídia Design</div>
                                     </a>
 
                                 </div>
 
-                                <div class="mil-grid-item architecture">
+                                <div class="mil-grid-item social">
 
                                     <a href="project.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
                                         <img src="img/covers/5.jpg" alt="cover">
@@ -195,12 +195,12 @@
                                             <h3 class="mil-upper mil-mb-30">Confidential <br>Technology</h3>
                                             <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
-                                        <div class="mil-category">Architecture</div>
+                                        <div class="mil-category">Social Mídia Design</div>
                                     </a>
 
                                 </div>
 
-                                <div class="mil-grid-item interior">
+                                <div class="mil-grid-item devweb">
 
                                     <a href="project.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
                                         <img src="img/covers/6.jpg" alt="cover">
@@ -208,12 +208,12 @@
                                             <h3 class="mil-upper mil-mb-30">Confidential <br>Technology</h3>
                                             <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
-                                        <div class="mil-category">Interior</div>
+                                        <div class="mil-category">Dev. Web</div>
                                     </a>
 
                                 </div>
 
-                                <div class="mil-grid-item sustainable">
+                                <div class="mil-grid-item appweb">
 
                                     <a href="project.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
                                         <img src="img/covers/7.jpg" alt="cover">
@@ -221,12 +221,12 @@
                                             <h3 class="mil-upper mil-mb-30">Confidential <br>Technology</h3>
                                             <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
-                                        <div class="mil-category">Sustainable</div>
+                                        <div class="mil-category">Aplicações Web</div>
                                     </a>
 
                                 </div>
 
-                                <div class="mil-grid-item interior">
+                                <div class="mil-grid-item devweb">
 
                                     <a href="project.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
                                         <img src="img/covers/8.jpg" alt="cover">
@@ -234,7 +234,7 @@
                                             <h3 class="mil-upper mil-mb-30">Confidential <br>Technology</h3>
                                             <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
-                                        <div class="mil-category">Interior</div>
+                                        <div class="mil-category">Dev. Web</div>
                                     </a>
 
                                 </div>
