--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="T4W - Technology web" />
     <meta name="keywords" content="bootstrap 5, Cocial Media, Web Design, Sites" />
     <meta name="author" content="T4W - Tech For Web" />
+    <meta property="og:image" content="https://techforweb.vercel.app/img/logo/logo.png" />
 
      <!-- Site favicon -->
      <link rel="shortcut icon" href="img/fiveicon/favicon.ico" />
