--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                                 <div class="mil-project-descr">
                                     <h4 class="mil-upper mil-mb-20">UI/UX Design</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
-                                    <p>UI/UX é a fusão de design visual e experiência do usuário para criar produtos digitais esteticamente atrativos e altamente usáveis. Enquanto UI trata da aparência visual, UX concentra-se na jornada do usuário, garantindo facilidade de uso e satisfação.</p>
+                                    <p>UI/UX é a fusão de design visual e experiência do usuário para criar produtos digitais esteticamente atrativos e altamente usáveis. UI trata da aparência visual e UX concentra-se na facilidade de uso e satisfação.</p>
                                 </div>
                             </a>
 
@@ -375,7 +375,7 @@
                                 <div class="mil-project-descr">
                                     <h4 class="mil-upper mil-mb-20">Catálogo de Vendas on-line</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
-                                    <p>O nosso site de vendas é definido por efetuar venda direta de produtos e serviços ao cliente por meio on-line por meio direto do WhatsApp ou não, sendo uma boa opção para lojas de roupas, acessórios e até serviços de delivery e outros formatos diversos de venda.</p>
+                                    <p>UM site de vendas definido por efetuar venda direta de produtos e serviços ao cliente por meio on-line direto do WhatsApp ou não, sendo uma boa opção para qualquer tipo de estabelecimento.</p>
                                 </div>
                             </a>
 
@@ -384,7 +384,7 @@
                                 <div class="mil-project-descr">
                                     <h4 class="mil-upper mil-mb-20">Back-end</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
-                                    <p>Construção da lógica de negócios, gerenciamento de banco de dados e manipulação de servidores. Os desenvolvedores Full Stack trabalham na parte não visível do sistema, garantindo a funcionalidade, segurança e eficiência dos aplicativos e sites.</p>
+                                    <p>Construção da lógica de negócios, gerenciamento de banco de dados e manipulação de servidores. Os dev back-end trabalham na parte não visível do sistema, garantindo a funcionalidade, segurança e eficiência dos aplicativos e sites.</p>
                                 </div>
                             </a>
 
@@ -396,7 +396,7 @@
                                 <div class="mil-project-descr">
                                     <h4 class="mil-upper mil-mb-20">Social Media Design</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
-                                    <p>Social Media Design refere-se à criação de conteúdo visual para plataformas de mídia social. Envolve a produção de gráficos, imagens e vídeos atraentes e alinhados à identidade da marca, com o objetivo de fortalecer a presença online, promover engajamento e transmitir mensagens de maneira visualmente impactante. O Social Media Designer trabalha para criar posts, anúncios e materiais visuais que cativem o público nas redes sociais, contribuindo para uma narrativa visual consistente e eficaz.</p>
+                                    <p> O Social Media Designer trabalha para criar posts, anúncios e materiais visuais que cativem o público nas redes sociais, contribuindo para uma narrativa visual consistente e eficaz.</p>
                                 </div>
                             </a>
 
