--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
                         <nav>
                             <ul>
                                 <li class="mil-has-children mil-active">
-                                    <a href="#">Home</a>
+                                    <a href="/">Home</a>
                                     
                                 </li>
                                 <li class="mil-has-children ">
-                                    <a href="portfolio.html">Portfolio</a>
+                                    <a href="/portfolio.html">Portfolio</a>
                                 </li>
                                 <li class="mil-has-children">
-                                    <a href="services.html">Serviços</a>
+                                    <a href="/services.html">Serviços</a>
                                 </li>
                                 <li class="mil-has-children">
-                                    <a href="project.html">Projetos</a>
+                                    <a href="/project.html">Projetos</a>
                                 </li>
-                                <li><a href="contact.html">Contato</a></li>
+                                <li><a href="/contact.html">Contato</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -211,7 +211,7 @@
                                         <div class="mil-icon mil-icon-accent-bg mil-up mil-mb-30">
                                             <img src="img/icons/3.svg" alt="icon">
                                         </div>
-                                        <h6 class="mil-upper mil-up">Social Mídia Design</h6>
+                                        <h6 class="mil-upper mil-up">Social Media Design</h6>
                                     </a>
 
                                 </div>
@@ -266,7 +266,7 @@
                                     <div class="mil-icon mil-icon-lg mil-mb-30">
                                         <img src="img/icons/3.svg" alt="icon">
                                     </div>
-                                    <h4 class="mil-upper mil-mb-20">Social Mídia Design</h4>
+                                    <h4 class="mil-upper mil-mb-20">Social Media Design</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
                                     <p class="mil-service-text">Um Social Media Designer oferece serviços essenciais para a presença online de uma marca, incluindo a criação de conteúdo visual, design de postagens adaptadas para redes sociais, manutenção da identidade visual da marca, desenvolvimento de estratégias visuais alinhadas aos objetivos e análise contínua do desempenho para otimização. Esses profissionais desempenham um papel fundamental na construção e no fortalecimento da presença da marca nas plataformas de mídia social.</p>
                                     <div class="mil-go-buton mil-icon mil-icon-lg mil-icon-accent-bg">
@@ -449,7 +449,7 @@
                                 <div class="col-md-6 col-lg-6 col-xl-3">
 
                                     <span class="mil-suptitle mil-light mil-upper mil-up mil-mb-30">Anderson</span>
-                                    <p class="mil-text-sm mil-up mil-light-soft mil-mb-30">Desenvolvedor Front-end <br> Social Mídia Design <br> UI/UX Designer</p>
+                                    <p class="mil-text-sm mil-up mil-light-soft mil-mb-30">Desenvolvedor Front-end <br> Social Media Design <br> UI/UX Designer</p>
 
                                 </div>
                                 <div class="col-md-6 col-lg-6 col-xl-3">
