--- a/portfolio.html
+++ b/portfolio.html
@@ -122,7 +122,7 @@
                     <div class="mil-filter mil-up mil-mb-90">
                         <div class="mil-filter-links">
                             <a href="#" data-filter="*" class="mil-current">Todos</a>
-                            <a href="#" data-filter=".social" class="">Social Mídia Design</a>
+                            <a href="#" data-filter=".social" class=""> Media Design</a>
                             <a href="#" data-filter=".devweb" class="">Desenvolvimento Web</a>
                             <a href="#" data-filter=".appweb" class="">Aplicações Web</a>
                         </div>
@@ -143,7 +143,7 @@
                                             <h3 class="mil-upper mil-mb-30">Modern <br>social</h3>
                                             <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
-                                        <div class="mil-category">Social Mídia Design</div>
+                                        <div class="mil-category">Social Media Design</div>
                                     </a>
 
                                 </div>
@@ -182,7 +182,7 @@
                                             <h3 class="mil-upper mil-mb-30">Confidential <br>Technology</h3>
                                             <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
-                                        <div class="mil-category">Social Mídia Design</div>
+                                        <div class="mil-category">Social Media Design</div>
                                     </a>
 
                                 </div>
@@ -195,7 +195,7 @@
                                             <h3 class="mil-upper mil-mb-30">Confidential <br>Technology</h3>
                                             <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
-                                        <div class="mil-category">Social Mídia Design</div>
+                                        <div class="mil-category">Social Media Design</div>
                                     </a>
 
                                 </div>
@@ -290,7 +290,7 @@
                                 <div class="col-md-6 col-lg-6 col-xl-3">
 
                                     <span class="mil-suptitle mil-light mil-upper mil-up mil-mb-30">Anderson</span>
-                                    <p class="mil-text-sm mil-up mil-light-soft mil-mb-30">Desenvolvedor Front-end <br> Social Mídia Design <br> UI/UX Designer</p>
+                                    <p class="mil-text-sm mil-up mil-light-soft mil-mb-30">Desenvolvedor Front-end <br> Social Media Design <br> UI/UX Designer</p>
 
                                 </div>
                                 <div class="col-md-6 col-lg-6 col-xl-3">
