--- a/services.html
+++ b/services.html
@@ -136,7 +136,7 @@
                                     <div class="mil-icon mil-icon-lg mil-mb-30">
                                         <img src="img/icons/3.svg" alt="icon">
                                     </div>
-                                    <h4 class="mil-upper mil-mb-20">Social Mídia Design</h4>
+                                    <h4 class="mil-upper mil-mb-20">Social Media Design</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
                                     <p class="mil-service-text">Um Social Media Designer oferece serviços essenciais para a presença online de uma marca, incluindo a criação de conteúdo visual, design de postagens adaptadas para redes sociais, manutenção da identidade visual da marca, desenvolvimento de estratégias visuais alinhadas aos objetivos e análise contínua do desempenho para otimização. Esses profissionais desempenham um papel fundamental na construção e no fortalecimento da presença da marca nas plataformas de mídia social.</p>
                                     <div class="mil-go-buton mil-icon mil-icon-lg mil-icon-accent-bg">
@@ -239,7 +239,7 @@
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Elaboração e criação <br>de conteúdo digital</h3>
                                 <div class="mil-divider-sm mil-up mil-mb-30"></div>
-                                <p class="mil-shortened mil-up mil-mb-30">Algumas ferramentas que utilizamos na criação de conteúdo digital (SOcial Mídia Desing e UI/UIX).</p>
+                                <p class="mil-shortened mil-up mil-mb-30">Algumas ferramentas que utilizamos na criação de conteúdo digital (Social MediaDesing e UI/UIX).</p>
                                 <ul class="mil-icon-list mil-mb-60">
                                     <li class="mil-up"><img src="img/icons/11.svg" alt="icon">Adobe Photoshop</li>
                                     <li class="mil-up"><img src="img/icons/11.svg" alt="icon">Adobe Illustrator</li>
@@ -319,7 +319,7 @@
                                 <div class="col-md-6 col-lg-6 col-xl-3">
 
                                     <span class="mil-suptitle mil-light mil-upper mil-up mil-mb-30">Anderson</span>
-                                    <p class="mil-text-sm mil-up mil-light-soft mil-mb-30">Desenvolvedor Front-end <br> Social Mídia Design <br> UI/UX Designer</p>
+                                    <p class="mil-text-sm mil-up mil-light-soft mil-mb-30">Desenvolvedor Front-end <br> Social Media Design <br> UI/UX Designer</p>
 
                                 </div>
                                 <div class="col-md-6 col-lg-6 col-xl-3">
