--- a/project.html
+++ b/project.html
@@ -220,7 +220,7 @@
                                 <div class="col-md-6 col-lg-6 col-xl-3">
 
                                     <span class="mil-suptitle mil-light mil-upper mil-up mil-mb-30">Anderson</span>
-                                    <p class="mil-text-sm mil-up mil-light-soft mil-mb-30">Desenvolvedor Front-end <br> Social Mídia Design <br> UI/UX Designer</p>
+                                    <p class="mil-text-sm mil-up mil-light-soft mil-mb-30">Desenvolvedor Front-end <br> Social Media Design <br> UI/UX Designer</p>
 
                                 </div>
                                 <div class="col-md-6 col-lg-6 col-xl-3">
