--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                                     
                                 </li>
                                 <li class="mil-has-children ">
-                                    <a href="/portfolio.html">Portfolio</a>
+                                    <a  href="portfolio.html">Portfolio</a>
                                 </li>
                                 <li class="mil-has-children">
-                                    <a href="/services.html">Serviços</a>
+                                    <a href="services.html">Serviços</a>
                                 </li>
                                 <li class="mil-has-children">
-                                    <a href="/project.html">Projetos</a>
+                                    <a href="project.html">Projetos</a>
                                 </li>
                                 <li><a href="/contact.html">Contato</a></li>
                             </ul>
