--- a/contact.html
+++ b/contact.html
@@ -55,20 +55,20 @@
                     <div class="mil-navigation">
                         <nav>
                             <ul>
-                                <li class="mil-has-children ">
+                                <li class="  ">
                                     <a href="/">Home</a>
                                     
                                 </li>
-                                <li class="mil-has-children ">
+                                <li class="">
                                     <a href="portfolio.html">Portfolio</a>
                                 </li>
-                                <li class="mil-has-children ">
+                                <li class=" ">
                                     <a href="services.html">Serviços</a>
                                 </li>
-                                <li class="mil-has-children">
+                                <li class="">
                                     <a href="project.html">Projetos</a>
                                 </li>
-                                <li class="mil-has-children mil-active">
+                                <li class="  mil-active">
                                     <a href="contact.html">Contato</a></li>
                             </ul>
                         </nav>
