--- a/services.html
+++ b/services.html
@@ -54,17 +54,17 @@
                     <div class="mil-navigation">
                         <nav>
                             <ul>
-                                <li class="mil-has-children ">
+                                <li class="  ">
                                     <a href="/">Home</a>
                                     
                                 </li>
-                                <li class="mil-has-children ">
+                                <li class="  ">
                                     <a href="portfolio.html">Portfolio</a>
                                 </li>
-                                <li class="mil-has-children mil-active">
+                                <li class="  mil-active">
                                     <a href="services.html">Serviços</a>
                                 </li>
-                                <li class="mil-has-children">
+                                <li class=" ">
                                     <a href="project.html">Projetos</a>
                                 </li>
                                 <li><a href="contact.html">Contato</a></li>
